--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <p>안녕하세요. 계원 예술 대학교 애니메이션학과 22519063 홍효주 프dfdfdf로젝트 페이지입니다</p>
 <p>와주셔서 감사합니다.</p>
 <br>
-<h2>프로젝트 제목<h/2>
+<h2>그 땐 그랬지<h/2>
 <p>제목기입하기</p>
 <br>
 <h2>프로젝트 내용<h/2>
